<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#D3D3D3"
    tools:context="com.app_web.technology.groceryshopper.Activitys.PayMentActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        card_view:cardElevation="2dp"
        android:layout_margin="10dp"
        card_view:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">










    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:text="@string/welcome_to_payment"/>
    </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity=""
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:text="@string/amount"
            android:textSize="@dimen/small_size"/>

        <TextView
            android:id="@+id/paypal_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:text="@string/amount"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/discount"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:text="@string/discount"
            android:textSize="@dimen/small_size"/>

        <TextView
            android:id="@+id/paypal_discount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:text="@string/discount"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:text="@string/delivery_charge"
            android:textSize="@dimen/small_size"/>

        <TextView
            android:id="@+id/paypal_delivery_charge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:text="@string/delivery_charge"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:text="@string/net_payable"
            android:textSize="@dimen/small_size"/>

        <TextView
            android:id="@+id/paypal_total_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_marginRight="30dp"
            android:text="@string/net_payable"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:text="@string/type"
            android:textStyle="bold"
            android:textSize="@dimen/small_size"/>

        <TextView
            android:id="@+id/paypal_delivery_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:text="@string/delivery"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/payment_method"
            android:textSize="@dimen/small_size"/>

        <TextView
            android:id="@+id/paypal_payment_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:text="@string/online"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_payment"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:layout_marginLeft="30dp"
            android:textColor="@color/white"
            android:background="#D3D3D3"

            android:text="@string/cancel"
            android:textSize="@dimen/small_size"/>

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_confirm_payment"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:background="#32CD32"
            android:text="@string/confirm"
            android:textSize="@dimen/small_size"/>
    </LinearLayout>

        </LinearLayout>



    </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>
