<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.app_web.technology.groceryshopper.Activitys.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/finish"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/finish" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/appweb" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="70dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="normal" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_launcher" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black">

                    <EditText
                        android:id="@+id/edt_mail_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black">

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/black"
                        android:capitalize="characters"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/backgroundcheckout"
                    android:capitalize="characters"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="@string/btn_sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/cardview_light_background"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btn_set_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:background="@android:color/transparent"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Forgot password?"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textStyle="italic"
                    android:typeface="normal" />


            </LinearLayout>


            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Don't have account yet?"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:textSize="@dimen/middle_size"/>
            </LinearLayout>-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="20dp"
                        android:background="@android:color/transparent"
                        android:elevation="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="SignUp"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="italic" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>

